# portfolio

./: .gitignore  Cargo.toml  LICENSE_MIT  README.md
preprocessor/: Cargo.toml  README.md
preprocessor/src/: main.rs
src/: lib.rs  model.uwu
vector-sheepy/: Cargo.toml  README.md
vector-sheepy/src/: utils.rs
www/: index.html  index.js  package-lock.json  package.json  style.css  webpack.config.js
www/img/: layout.kra
