[package]
name = "vector-sheepy"
version = "0.1.0"
authors = ["Fuzzyzilla <fuzzyzilla01@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.84"
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
# console_error_panic_hook = { version = "0.1.7" }
js-sys = "0.3.64"
bytemuck = { version = "1.13.1", features = ["derive"] }

[dependencies.web-sys]
version = "0.3.64"
features = [
    'WebGlBuffer',
    'WebGlVertexArrayObject',
    'WebGl2RenderingContext',
    'WebGlTransformFeedback',
    'WebGlProgram',
    'WebGlShader',
    'WebGlUniformLocation',
]


[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = "fat"
